--- a/gradle.properties
+++ b/gradle.properties
@@ -18,3 +18,5 @@ kotlin.coroutines=enable
 reactNativeArchitectures=armeabi-v7a,arm64-v8a,x86,x86_64
 hermesEnabled=true
 newArchEnabled=false
+
+org.gradle.java.home=/Library/Java/JavaVirtualMachines/jdk-17.jdk/Contents/Home
