--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
 apply plugin: "org.jetbrains.kotlin.android"
 apply plugin: "com.facebook.react"
+apply plugin: 'kotlin-parcelize'
 
 android {
     compileSdk 34
@@ -35,6 +36,12 @@ android {
         }
     }
 
+    buildFeatures {
+        compose true
+    }
+    composeOptions {
+        kotlinCompilerExtensionVersion '1.4.1'
+    }
 }
 
 dependencies {
@@ -60,12 +67,14 @@ dependencies {
     implementation project(":rn")
 
 
-    implementation "androidx.core:core-ktx:1.1.0"
-    implementation "androidx.activity:activity-ktx:1.1.0"
+    implementation "androidx.core:core-ktx:1.3.0"
+    implementation "androidx.activity:activity-ktx:1.2.0"
+    implementation "androidx.fragment:fragment-ktx:1.3.0"
     implementation "androidx.lifecycle:lifecycle-runtime:2.2.0"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1"
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.1"
+
 
 
     //noinspection GradleDependency
@@ -99,6 +108,15 @@ dependencies {
         implementation 'org.webkit:android-jsc:+'
     }
 
+    implementation "com.github.bumptech.glide:glide:4.11.0"
+    implementation "com.github.bumptech.glide:compose:1.0.0-beta01"
+
+    // 添加以下 Compose 依赖
+    implementation 'androidx.compose.ui:ui:1.0.0-beta09'
+    implementation 'androidx.compose.material:material:1.0.0-beta09'
+    implementation 'androidx.compose.ui:ui-tooling:1.0.0-beta09'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
+    implementation 'androidx.activity:activity-compose:1.3.0-alpha08'
 
 }
 
