--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
 
     <uses-feature
         android:name="android.hardware.telephony"
@@ -10,15 +10,15 @@
         android:required="false" />
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"
+    <uses-permission
+        android:name="android.permission.READ_EXTERNAL_STORAGE"
         android:maxSdkVersion="32" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+    <uses-permission
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
         android:maxSdkVersion="32"
         tools:ignore="ScopedStorage" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
-
-
     <uses-permission android:name="android.permission.ACCEPT_HANDOVER" />
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
@@ -58,20 +58,29 @@
     <uses-permission android:name="android.permission.WRITE_CALL_LOG" />
     <uses-permission android:name="android.permission.WRITE_CONTACTS" />
 
-
     <application
         android:name=".MainApplication"
         android:allowBackup="true"
         android:hardwareAccelerated="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        tools:ignore="HardcodedDebugMode"
         android:usesCleartextTraffic="true"
-        android:networkSecurityConfig="@xml/network_security_config"
-        >
+        tools:ignore="HardcodedDebugMode" >
+        <activity
+            android:name=".activity.CircularFlowDemoActivity"
+            android:exported="false" />
+        <activity android:name=".activity.CarouselHelperActivity" />
+        <activity
+            android:name=".activity.CarouseActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.UIExampleActivity"
+            android:exported="false"
+            android:theme="@style/MaterialTheme" />
         <activity
             android:name=".rx.RxJavaDemoActivity"
             android:exported="true" />
@@ -82,8 +91,8 @@
         <activity
             android:name=".MainActivity"
             android:configChanges="orientation|screenSize"
-            android:launchMode="singleTask"
-            android:exported="true">
+            android:exported="true"
+            android:launchMode="singleTask" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -102,13 +111,8 @@
         <activity android:name=".oom.innerclass.OOMInnerClassActivity" />
         <activity android:name=".oom.handler.OOMHandlerActivity" />
         <activity android:name=".oom.handler.OOMHandlerRightActivity" />
-
-
-
-<!--        <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />-->
-<!--        <activity android:name=".rn.MyReactActivity" android:label="@string/app_name" android:theme="@style/Theme.AppCompat.Light.NoActionBar" />-->
-
-
+        <activity android:name=".view.GlideExampleActivity" /> <!-- <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" /> -->
+        <!-- <activity android:name=".rn.MyReactActivity" android:label="@string/app_name" android:theme="@style/Theme.AppCompat.Light.NoActionBar" /> -->
         <provider
             android:name=".provider.UsersProvider"
             android:authorities="com.lqd.androidpractice.provider.UsersProvider" />
@@ -116,7 +120,7 @@
             android:name="androidx.core.content.FileProvider"
             android:authorities="${applicationId}.provider"
             android:exported="false"
-            android:grantUriPermissions="true">
+            android:grantUriPermissions="true" >
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/file_paths" />
