--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,10 @@ android {
         enabled = true
     }
 
+    buildFeatures {
+        viewBinding = true // 开启视图绑定，会为每个xml布局文件生成一个绑定类
+    }
+
     viewBinding {
         enabled = true
     }
@@ -49,6 +53,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.google.android.material:material:1.11.0'
+    implementation 'androidx.compose.material3:material3-android:1.2.1'
 
 
     testImplementation 'junit:junit:4.12'
@@ -108,15 +113,17 @@ dependencies {
         implementation 'org.webkit:android-jsc:+'
     }
 
-    implementation "com.github.bumptech.glide:glide:4.11.0"
+    implementation "com.github.bumptech.glide:glide:4.15.1"
     implementation "com.github.bumptech.glide:compose:1.0.0-beta01"
 
     // 添加以下 Compose 依赖
-    implementation 'androidx.compose.ui:ui:1.0.0-beta09'
-    implementation 'androidx.compose.material:material:1.0.0-beta09'
-    implementation 'androidx.compose.ui:ui-tooling:1.0.0-beta09'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
-    implementation 'androidx.activity:activity-compose:1.3.0-alpha08'
+    implementation 'androidx.compose.ui:ui:1.6.8'
+    implementation 'androidx.compose.material:material:1.6.8'
+    implementation 'androidx.compose.ui:ui-tooling:1.6.8'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.8.4'
+    implementation 'androidx.activity:activity-compose:1.9.1'
+    implementation 'androidx.compose.material:material-icons-extended:1.6.8'
+
 
 }
 
