--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <uses-feature
         android:name="android.hardware.telephony"
@@ -69,7 +69,24 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
-        tools:ignore="HardcodedDebugMode" >
+        tools:ignore="HardcodedDebugMode">
+        <service
+            android:name=".services.HelloService"
+            android:enabled="true"
+            android:exported="false"></service>
+
+        <activity
+            android:name=".activity.IntentExampleActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.ComposeExample2Activity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.ComposeExample1Activity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.EventExampleActivity"
+            android:exported="false" />
         <activity
             android:name=".activity.CircularFlowDemoActivity"
             android:exported="false" />
@@ -92,7 +109,7 @@
             android:name=".MainActivity"
             android:configChanges="orientation|screenSize"
             android:exported="true"
-            android:launchMode="singleTask" >
+            android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -120,7 +137,7 @@
             android:name="androidx.core.content.FileProvider"
             android:authorities="${applicationId}.provider"
             android:exported="false"
-            android:grantUriPermissions="true" >
+            android:grantUriPermissions="true">
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/file_paths" />
